--- a/server/articles/templates/articles/search.html
+++ b/server/articles/templates/articles/search.html
@@ -16,8 +16,22 @@
                 <li class="media my-4">
                     <img class="d-flex mr-3" src="https://gold.xitu.io/images/welcome/entry-default-img@2x.png" alt="Generic placeholder image" style="width: 64px; height: 64px;">
                     <div class="media-body">
-                        <h5 class="mt-0">{{article.title}}</h5>
+                        <h5 class="mt-0">
+                            {% if article.is_article %}
+                            <a href="{{article.url}}">{{article.title}}</a>
+                            {% else %}
+                            {{article.title}}
+                            {% endif %}
+                        </h5>
+                        <a href="{{article.author.url}}">@{{article.author.nickname}}</a>
                         <time class="timeago" datetime="{{article.published}}"></time>
+                        <div class="list-group">
+                            {% for attachment in article.attachments %}
+                            <a href="{{attachment.file}}" class="list-group-item border-0 list-group-item-action" target="_blank">
+                                {% trans "Attachment: " %}{{attachment.name}}
+                            </a>
+                            {% endfor %}
+                        </div>
                     </div>
                 </li>
                 {% endfor %}
