--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -2,27 +2,26 @@
 
 {% block content %}
 
-{% verbatim %}
 <template id="tmpl-comment-item">
     <li class="media my-4">
+        <img src="[[author.avatar_url]]" class="rounded-circle mr-3">
         <div class="media-body">
-            {{#reply_to}}
-            @{{reply_to.nickname}}
-            {{/reply_to}}
-            {{content}}
-            <p>
+            [[#reply_to]]
+            <small class="text-primary">{% trans 'Reply to' %} [[reply_to.nickname]]</small><br>
+            [[/reply_to]]
+            [[content]]
+            <p class="text-muted">
                 <small class="mt-1 mb-0">
-                    {{author.nickname}}&middot;
-                    <time class="timeago" datetime="{{posted}}"></time>
-                    {{#can_reply}}
-                    <button class="btn btn-link btn-sm btn-reply" data-id="{{author.id}}" data-nickname="{{author.nickname}}">Reply</button>
-                    {{/can_reply}}
+                    <a href="[[author.url]]">[[author.nickname]]</a>&nbsp;&middot;
+                    <time class="timeago" datetime="[[posted]]"></time>
+                    [[#can_reply]]
+                    <button class="btn btn-link btn-sm btn-reply" data-id="[[author.id]]" data-nickname="[[author.nickname]]">Reply</button>
+                    [[/can_reply]]
                 </small>
             </p>
         </div>
     </li>
 </template>
-{% endverbatim %}
 
 <div class="container-fluid">
     <article class="col-md-8 offset-md-2">
@@ -30,14 +29,7 @@
             <h1 class="text-center">{{article.title}}</h1>
         </section>
         <section class="my-3">
-            <span class="text-muted">
-                {{article.author.nickname}} &middot;
-                {% trans 'Publish at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time> &middot;
-                {% trans 'Edit at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time>
-            </span>
-        </section>
-        <section class="my-3">
-            {% if perms.articles.can_verify  and article.author.id != user.id %}
+            {% if perms.articles.can_verify %}
             <div class="btn-group btn-group-sm">
                 {% if article.status != 'rejected' %}
                 <button class="btn btn-secondary btn-danger" id="reject">{% trans 'Reject' %}</button>
@@ -51,10 +43,31 @@
         <section class="my-2">
             {{article.content|safe}}
         </section>
+        <section class="my-3">
+            <div class="text-right">
+                {% has_perm 'articles:change_article' user article as can_change_article %}
+                {% if can_change_article %}
+                <a href="/articles/edit/{{article.id}}/">{% trans 'Edit' %}</a>
+                <a href="javascript:void(0)" class="text-danger" id="delete-article">{% trans 'Delete' %}</a>
+                {% endif %}
+            </div>
+            <p class="text-muted text-right">
+                {{article.author.user_tag|safe}} &middot;
+                {% trans 'Publish at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time> &middot;
+                {% trans 'Edit at' %} <time class="timeago" datetime="{{article.published|date:'c'}}"></time>
+            </p>
+        </section>
         <section class="my-2">
             {% for tag in article.tags.all %}
-            <span class="badge badge-default">{{tag.name}}</span>
+            <span class="badge badge-primary">{{tag.name}}</span>
             {% endfor %}
+        </section>
+        <section class="mt-3">
+            <div class="list-group">
+            {% for attachment in article.attachments.all %}
+                <a href="{{attachment.file}}" class="list-group-item list-group-item-action" target="_blank">{{attachment.name}}</a>
+            {% endfor %}
+            </div>
         </section>
         <section class="my-5">
             <h6 id='comment-title'>{% trans 'Comment' %}</h6>
@@ -65,15 +78,18 @@
                     <textarea name="content" class="form-control"></textarea>
                 </div>
                 <div class="form-group clearfix">
+                    {% if user.is_authenticated %}
                     <button type="submit" class="btn btn-primary float-right ml-2">{% trans 'Submit' %}</button>
                     <button type="button" class="btn btn-secondary ml-2 float-right hidden-xs-up" id="cancel-reply">{% trans 'Cancel Reply' %}</button>
-                    <small class="text-muted float-right hidden-sm-down my-2">Ctrl + Enter</small>
+                    {% else %}
+                    <a href="/users/login/" class="btn btn-primary float-right">{% trans 'Login to comment' %}</a>
+                    {% endif %}
                 </div>
             </form>
         </section>
         <section>
             <ul class="list-unstyled" id="comment-box"></ul>
-            <p id="load-more-comments">{% trans 'Load More' %}</p>
+            <p id="load-more-comments" class="text-center bg-muted">{% trans 'Load More' %}</p>
         </section>
     </article>
 </div>
