--- a/server/templates/components/header.html
+++ b/server/templates/components/header.html
@@ -1,7 +1,7 @@
 {% get_available_languages as LANGUAGES %}
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse sticky" data-s-top="0" data-s-z-index="10000" data-s-auto-height="false">
-    <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#top-nav-bar">
+    <button class="navbar-toggler navbar-toggler-right border-0" data-toggle="collapse" data-target="#top-nav-bar">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a href="#" class="navbar-brand">HFMUN</a>
