--- a/server/templates/bases/base-with-header.html
+++ b/server/templates/bases/base-with-header.html
@@ -6,5 +6,11 @@
 {% endblock %}
 
 {% block after_scripts %}
+{% if user.is_authenticated %}
+<script>
+    define('ws-config', '/ws/notices/')
+    require(['notices/index'])
+</script>
+{% endif %}
 {% block scripts %} {% endblock %}
 {% endblock %}
