--- a/server/templates/components/header.html
+++ b/server/templates/components/header.html
@@ -6,7 +6,7 @@
             <span class="both dot"></span>
         </span>
     </button>
-    <a href="#" class="navbar-brand">HSFZMUN</a>
+    <a href="/" class="navbar-brand">HSFZMUN</a>
     <div class="collapse navbar-collapse" id="top-nav-bar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
