--- a/server/users/templates/users/bulk-creation.html
+++ b/server/users/templates/users/bulk-creation.html
@@ -3,12 +3,15 @@
 {% block content %}
 <div class="container">
     <div class="alert alert-info">
-        <pre>
-格式： <用户名> <昵称> <语言标示>（e|z，即英文|中文）
-例：
-
-zhangsan 张三 z
-lisi 李四 e</pre>
+            {% filter force_escape|linebreaks %}格式：
+            <用户名><空格><昵称><空格><语言标示>（e|z|a，即英文|中文|跨语言）
+            例：
+            {% endfilter %}
+        <div class="bg-faded">
+            zhangsan 张三 z<br>
+            lisi 李四 e<br>
+            admin 管理员 a
+        </div>
     </div>
     <form action="" method="post" class="mb-1">
         {% csrf_token %}
