--- a/server/articles/templates/articles/edit.html
+++ b/server/articles/templates/articles/edit.html
@@ -1,7 +1,7 @@
 {% extends "bases/base-with-header.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-3">
     <form id="edit-form">
         <input type="hidden" name="author" value="{{user.id}}">
         <div class="form-group">
