--- a/server/notices/templates/notices/list.html
+++ b/server/notices/templates/notices/list.html
@@ -1,8 +1,8 @@
 {% extends "bases/base-with-header.html" %}
 
 {% block content %}
-<div class="container">
-    <div class="col-md-8 offset-md-2">
+<div class="container mt-3">
+    <div class="col-lg-10 offset-lg-1">
         <ul class="nav nav-tabs h-scroll">
             {% for item in categories %}
             <li class="nav-item">
