--- a/server/users/templates/users/profile/admin.html
+++ b/server/users/templates/users/profile/admin.html
@@ -16,3 +16,9 @@
         <a href="{% url 'admin:articles_article_changelist' %}">{% trans 'Article Management' %}</a>
     </section>
 </article>
+<article class="mt-1">
+    <h3>{% trans 'Discussions' %}</h3>
+    <section class="py-1 pl-4">
+        <a href="{% url 'admin:chat_discussion_changelist' %}">{% trans 'Discussion Management' %}</a>
+    </section>
+</article>
