--- a/server/articles/templates/articles/detail.html
+++ b/server/articles/templates/articles/detail.html
@@ -23,7 +23,7 @@
     </li>
 </template>
 
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <article class="col-md-8 offset-md-2">
         <section>
             <h1 class="text-center">{{article.title}}</h1>
