--- a/server/articles/templates/articles/list.html
+++ b/server/articles/templates/articles/list.html
@@ -30,7 +30,7 @@
 </template>
 
 <template id="tmpl-article-side-nav-stacked">
-    <li class="nav-item">
+    <li class="nav-item py-2">
         [[title.0]]
     </li>
     [[#items]]
@@ -45,28 +45,40 @@
 </template>
 
 <template id="tmpl-article">
+    [[#is_article]]
     <li class="media my-4">
-        <img class="d-flex mr-3" src="https://gold.xitu.io/images/welcome/entry-default-img@2x.png" alt="Generic placeholder image" style="width: 64px; height: 64px;">
+        <div class="d-flex mr-4">
+            <i class="fa fa-3x fa-file-text-o"></i>
+        </div>
         <div class="media-body">
             <h5 class="mt-0">
-                [[#is_article]]
                 <a href="[[url]]">[[title]]</a>
-                [[/is_article]]
-                [[^is_article]]
-                [[title]]
-                [[/is_article]]
             </h5>
-            <a href="[[author.url]]">@[[author.nickname]]</a>
-            <time class="timeago" datetime="[[published]]"></time>
-            <div class="list-group">
-                [[#attachments]]
-                <a href="[[file]]" class="list-group-item border-0 list-group-item-action" target="_blank">
-                    {% trans "Attachment: " %}[[name]]
-                </a>
-                [[/attachments]]
-            </div>
+            <small class="text-muted py-2 d-block">
+                <a href="[[author.url]]">@[[author.nickname]]</a>
+                <time class="timeago" datetime="[[published]]"></time>
+            </small>
         </div>
     </li>
+    [[/is_article]]
+    [[^is_article]]
+    [[#attachments]]
+    <li class="media my-4">
+        <span class="d-flex mr-4">
+            <i class="fa fa-paperclip fa-3x"></i>
+        </span>
+        <div class="media-body">
+            <h5 class="mt-0">
+                [[name]]
+            </h5>
+            <small class="text-muted d-block py-2">
+                <a href="[[url]]" class="text-success">{% trans 'Download' %}</a>
+                <time class="timeago" datetime="[[created]]"></time>
+            </small>
+        </div>
+    </li>
+    [[/attachments]]
+    [[/is_article]]
 </template>
 
 <template id="tmpl-article-list-view">
@@ -91,11 +103,11 @@
     </nav>
 </template>
 
-<div class="container">
-    <ul class="nav nav-pills hidden-md-up nav-fill sticky" id="article-top-nav" data-s-top="60" data-s-z-index="9999"></ul>
+<div class="container mt-3">
+    <ul class="nav nav-pills hidden-md-up nav-fill stiky" id="article-top-nav" data-s-top="60" data-s-z-index="9999"></ul>
     <div class="row">
         <div class="hidden-sm-down col-md-4">
-            <ul class="nav nav-pills flex-column sticky" id="article-side-nav" data-s-top="60" data-s-z-index="9999"></ul>
+            <ul class="nav nav-pills flex-column stiky" id="article-side-nav" data-s-top="60" data-s-z-index="9999"></ul>
         </div>
         <div class="tab-content col-md-8"></div>
     </div>
